# inky-home-display

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  TRANSPORT_INTEGRATION.md  benchmark_draw.py  docker-compose.yml  locale.gen  patch_test_weather.sh  patch_weather.sh  pyproject.toml  requirements-deploy.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt  sync.sh  test-visual-regression.sh  validate.sh
.github/workflows/: test.yml
src/: cache.py  config.py  display.py  display_backend.py  fonts.py  icons.py  public_transport.py  sensors.py  test_fonts.py  tibber.py  tokens.py  update_display.py  weather.py
src/data/: cache.py  house_sensors.py  public_transport.py  thermia.py  tibber.py  tokens.py  weather.py
src/icons/16/: cloud.xbm  cloud_moon.xbm  cloud_sun.xbm  cloud_wind.xbm  cloud_wind_moon.xbm  cloud_wind_sun.xbm  clouds.xbm  lightning.xbm  moon.xbm  rain0.xbm  rain0_sun.xbm  rain1.xbm  rain1_moon.xbm  rain1_sun.xbm  rain2.xbm  rain_lightning.xbm  rain_snow.xbm  snow.xbm  snow_moon.xbm  snow_sun.xbm  sun.xbm  wind.xbm
src/icons/32/: cloud.xbm  cloud_moon.xbm  cloud_sun.xbm  cloud_wind.xbm  cloud_wind_moon.xbm  cloud_wind_sun.xbm  clouds.xbm  lightning.xbm  moon.xbm  rain0.xbm  rain0_sun.xbm  rain1.xbm  rain1_moon.xbm  rain1_sun.xbm  rain2.xbm  rain_lightning.xbm  rain_snow.xbm  snow.xbm  snow_moon.xbm  snow_sun.xbm  sun.xbm  wind.xbm
src/widgets/: __init__.py  base.py  energy.py  house_temps.py  layout.py  transport.py  weather.py
tests/: benchmark_public_transport.py  conftest.py  run_tests_with_mocks.py  test_cache.py  test_config.py  test_display.py  test_display_backend.py  test_fonts.py  test_icons.py  test_public_transport.py  test_tibber.py  test_tokens.py  test_transport_widget.py  test_visual_regression.py  test_weather.py  verify_manually.py
tests/data/: test_cache.py  test_house_sensors.py  test_public_transport.py  test_thermia.py  test_tibber.py
tests/widgets/: test_base.py  test_energy_widgets.py  test_house_temps_widget.py  test_layout_widgets.py  test_weather_widget.py
